--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -31,7 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/size_16sp"
+        android:background="@color/purple_700"
+        android:backgroundTint="@color/purple_700"
         android:layout_marginBottom="@dimen/size_70dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/ic_shopping_cart" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
