--- a/app/src/main/res/layout/layout_categories.xml
+++ b/app/src/main/res/layout/layout_categories.xml
@@ -6,7 +6,7 @@
             type="com.example.bequem.home.pojo.Categories" />
     </data>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="@dimen/size_160dp"
+        android:layout_width="@dimen/size_140dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/size_5dp"
         android:layout_marginRight="@dimen/size_2dp"
@@ -30,9 +30,9 @@
 
                 <ImageView
                     android:id="@+id/imageView6"
-                    android:layout_width="@dimen/size_100dp"
-                    android:layout_height="@dimen/size_80dp"
-                    android:layout_marginTop="@dimen/size_20dp"
+                    android:layout_width="@dimen/size_90dp"
+                    android:layout_height="@dimen/size_70dp"
+                    android:layout_marginTop="@dimen/size_15dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_centerHorizontal="true"
                     app:categories="@{categories.category_image}"
@@ -49,6 +49,7 @@
                     android:fontFamily="@font/amaranth"
                     android:textSize="16sp"
                     android:textStyle="bold"
+                    android:lines="2"
                     android:lineSpacingExtra="2sp"
                     android:maxLines="2"
                     android:padding="5dp"
