--- a/app/src/main/res/layout/layout_featured.xml
+++ b/app/src/main/res/layout/layout_featured.xml
@@ -12,6 +12,7 @@
         android:layout_marginRight="@dimen/size_2dp"
         app:cardElevation="@dimen/size_5dp"
         app:cardCornerRadius="@dimen/size_5dp"
+        android:layout_marginBottom="@dimen/padd_10"
         app:cardBackgroundColor="@color/white"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
