Place Order Api Completed

--- a/app/src/main/res/layout/layout_featured.xml
+++ b/app/src/main/res/layout/layout_featured.xml
@@ -39,7 +39,7 @@
                     android:layout_marginTop="@dimen/size_10dp"
                     android:text="@{featuredproducts.item_name}"
                     android:layout_marginLeft="@dimen/size_10dp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/purple_700"
                     android:fontFamily="@font/amaranth"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -86,7 +86,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/size_30dp"
                     android:layout_below="@id/textView_price"
-                    android:text="Buy Now"
+                    android:text="Add To Cart"
                     android:textColor="@color/purple_700"
                     android:background="@drawable/heading_border"
                     android:textAlignment="center"
