--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -64,63 +64,13 @@
                             android:background="@drawable/edittext_background"
                             android:padding="@dimen/padd_10"/>
 
-                        <TextView
-                            android:id="@+id/text_email"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="Email"
-                            android:layout_below="@id/edittext_name"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/amaranth"
-                            android:layout_marginTop="@dimen/padd_10"
-                            android:textSize="@dimen/size_16dp"
-                            android:layout_marginLeft="@dimen/padd_10"/>
-
-                        <EditText
-                            android:id="@+id/edittext_email"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/text_email"
-                            android:layout_marginTop="@dimen/padd_10"
-                            android:layout_marginLeft="@dimen/padd_10"
-                            android:layout_marginRight="@dimen/padd_10"
-                            android:hint="Enter Name"
-                            android:fontFamily="@font/amaranth"
-                            android:background="@drawable/edittext_background"
-                            android:padding="@dimen/padd_10"/>
-                        <TextView
-                            android:id="@+id/text_phone"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="Phone"
-                            android:layout_below="@id/edittext_email"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/amaranth"
-                            android:layout_marginTop="@dimen/padd_10"
-                            android:textSize="@dimen/size_16dp"
-                            android:layout_marginLeft="@dimen/padd_10"/>
-
-                        <EditText
-                            android:id="@+id/edittext_phone"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/text_phone"
-                            android:layout_marginTop="@dimen/padd_10"
-                            android:layout_marginLeft="@dimen/padd_10"
-                            android:layout_marginRight="@dimen/padd_10"
-                            android:fontFamily="@font/amaranth"
-                            android:hint="Enter Phone Number"
-                            android:background="@drawable/edittext_background"
-                            android:padding="@dimen/padd_10"/>
 
                         <TextView
                             android:id="@+id/text_address1"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="Address Line 1"
-                            android:layout_below="@id/edittext_phone"
+                            android:text="Address Line"
+                            android:layout_below="@id/edittext_name"
                             android:textColor="@color/black"
                             android:textStyle="bold"
                             android:fontFamily="@font/amaranth"
@@ -137,42 +87,56 @@
                             android:layout_marginLeft="@dimen/padd_10"
                             android:layout_marginRight="@dimen/padd_10"
                             android:fontFamily="@font/amaranth"
-                            android:hint="Enter Phone Number"
+                            android:hint="Address"
                             android:background="@drawable/edittext_background"
                             />
-
-                        <TextView
-                            android:id="@+id/text_address2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="Address Line 2"
-                            android:layout_below="@id/edittext_address1"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/amaranth"
-                            android:layout_marginTop="@dimen/padd_10"
-                            android:textSize="@dimen/size_16dp"
-                            android:layout_marginLeft="@dimen/padd_10"/>
 
                         <EditText
-                            android:id="@+id/edittext_address2"
+                            android:id="@+id/editTextLiveLocation"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/size_80dp"
-                            android:layout_below="@id/text_address2"
-                            android:layout_marginTop="@dimen/padd_10"
-                            android:layout_marginLeft="@dimen/padd_10"
-                            android:layout_marginRight="@dimen/padd_10"
-                            android:fontFamily="@font/amaranth"
-                            android:hint="Enter Phone Number"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/padd_10"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="@dimen/padd_10"
                             android:background="@drawable/edittext_background"
-                            />
+                            android:drawablePadding="@dimen/size_10dp"
+                            android:ems="10"
+                            android:layout_below="@id/edittext_address1"
+                            android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                            android:editable="false"
+                            android:fontFamily="@font/amaranth"
+                            android:hint="Your Location"
+                            android:inputType="textPersonName"
+                            android:padding="@dimen/padd_10"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/editTextTextAddress" />
+
+                        <Button
+                            android:id="@+id/button_location"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:background="@drawable/login_button"
+                            android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                            android:drawablePadding="@dimen/size_8dp"
+                            android:padding="@dimen/size_10dp"
+                            android:text="Select Live Location"
+                            android:textAllCaps="false"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@id/editTextLiveLocation"
+                            android:textColor="@color/mdtp_white"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/editTextLiveLocation" />
 
                         <TextView
                             android:id="@+id/text_pin"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:text="Pin Code"
-                            android:layout_below="@id/edittext_address2"
+                            android:layout_below="@id/button_location"
                             android:textColor="@color/black"
                             android:textStyle="bold"
                             android:fontFamily="@font/amaranth"
@@ -188,7 +152,35 @@
                             android:layout_marginTop="@dimen/padd_10"
                             android:layout_marginLeft="@dimen/padd_10"
                             android:layout_marginRight="@dimen/padd_10"
-                            android:hint="Enter Phone Number"
+                            android:hint="Enter Pincode"
+                            android:maxLength="6"
+                            android:inputType="number"
+                            android:fontFamily="@font/amaranth"
+                            android:background="@drawable/edittext_background"
+                            android:layout_marginBottom="@dimen/size_15dp"
+                            android:padding="@dimen/padd_10"/>
+                        <TextView
+                            android:id="@+id/text_landmark"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Landmark"
+                            android:layout_below="@id/edittext_pin"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/amaranth"
+                            android:layout_marginTop="@dimen/padd_10"
+                            android:textSize="@dimen/size_16dp"
+                            android:layout_marginLeft="@dimen/padd_10"/>
+
+                        <EditText
+                            android:id="@+id/edittext_landmark"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/text_landmark"
+                            android:layout_marginTop="@dimen/padd_10"
+                            android:layout_marginLeft="@dimen/padd_10"
+                            android:layout_marginRight="@dimen/padd_10"
+                            android:hint="Enter Landmark"
                             android:fontFamily="@font/amaranth"
                             android:background="@drawable/edittext_background"
                             android:layout_marginBottom="@dimen/size_15dp"
