--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F4F5FA"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".home.fragments.CartFragment">
+        tools:context=".home.activity.CartActivity">
 
-        <!-- TODO: Update blank fragment layout -->
+        <include
+            android:id="@+id/layoutBase"
+            layout="@layout/layout_base"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
         <androidx.cardview.widget.CardView
             android:id="@+id/card_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/white"
             android:layout_marginRight="@dimen/size_15dp"
+            android:layout_below="@id/layoutBase"
             app:cardCornerRadius="@dimen/size_8dp"
             android:layout_marginLeft="@dimen/size_15dp"
             android:layout_marginTop="@dimen/size_15dp"
@@ -50,14 +58,12 @@
             android:layout_alignParentBottom="true"
             android:orientation="horizontal">
 
-
             <TextView
                 android:id="@+id/txtAmount"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:textStyle="bold"
                 android:background="@color/white"
                 android:gravity="center_vertical"
                 android:paddingStart="@dimen/padd_10"
@@ -74,7 +80,6 @@
                 android:text="CheckOut"
                 android:textColor="@color/purple_700" />
         </LinearLayout>
-
 
 
 
