--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,8 @@
                 android:drawablePadding="@dimen/padd_10"
                 android:hint="Phone Number"
                 android:fontFamily="@font/amaranth"
-                android:inputType="textPersonName"
+                android:inputType="phone"
+                android:maxLength="10"
                 android:padding="15dp"
                 android:layout_below="@id/imageView_logo"
                 />
@@ -73,7 +74,6 @@
                 android:background="@drawable/search_background"
                 android:layout_below="@id/editTextUsername"
                 android:ems="10"
-                android:maxLength="10"
                 android:fontFamily="@font/amaranth"
                 android:hint="Password"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
