--- a/app/src/main/res/layout/layout_cart.xml
+++ b/app/src/main/res/layout/layout_cart.xml
@@ -8,20 +8,18 @@
             type="com.example.bequem.home.pojo.CartResponse.Cart" />
     </data>
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView_cart"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/size_140dp"
-        android:layout_marginBottom="@dimen/padd_10"
-        android:layout_marginLeft="@dimen/size_15dp"
-        android:layout_marginRight="@dimen/size_15dp"
+        android:layout_height="wrap_content"
+        app:cardElevation="@dimen/padd_10"
         app:cardCornerRadius="@dimen/size_2dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardElevation="@dimen/size_10dp">
-
+        android:layout_marginTop="@dimen/size_8dp"
+        android:layout_marginLeft="@dimen/padd_10"
+        android:layout_marginRight="@dimen/padd_10"
+        app:cardBackgroundColor="@color/white">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false">
+            android:layout_height="wrap_content"
+            >
 
 
             <ImageView
@@ -30,8 +28,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_delete_24"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:padding="@dimen/size_8dp"/>
+                android:padding="@dimen/size_10dp"/>
 
 
 
@@ -41,20 +38,20 @@
                 android:layout_width="@dimen/size_100dp"
                 android:layout_height="@dimen/size_100dp"
                 android:src="@drawable/topwear"
-                android:layout_centerVertical="true"
                 android:padding="@dimen/size_5dp"
                 bind:category_image="@{cartItems.item_image}"
                 />
 
             <TextView
                 android:id="@+id/text_itemName"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/imageView_item"
                 android:text="@{cartItems.item_name}"
                 android:layout_marginLeft="@dimen/size_16dp"
                 android:textStyle="normal"
                 android:textSize="@dimen/size_16dp"
+                android:lines="2"
                 android:layout_marginTop="@dimen/size_15dp"
                 android:textColor="@color/purple_700"
                 android:fontFamily="@font/amaranth"/>
@@ -89,74 +86,7 @@
                 android:fontFamily="@font/amaranth"/>
 
 
-<!--            <LinearLayout-->
-<!--                android:id="@+id/qtyLay"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerVertical="true"-->
-<!--                android:layout_margin="@dimen/size_10dp"-->
-<!--                android:layout_toRightOf="@id/imageView_item"-->
-<!--                android:layout_below="@id/text_price"-->
-<!--                android:background="@color/purple_200"-->
-<!--                android:padding="@dimen/size_5dp"-->
-<!--                android:orientation="horizontal">-->
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/minus"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:clickable="true"-->
-<!--                    android:focusable="true"-->
-<!--                    android:focusableInTouchMode="false"-->
-<!--                    android:src="@drawable/ic_minus__2_" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/quantityValue"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginLeft="@dimen/size_8dp"-->
-<!--                    android:layout_marginRight="@dimen/size_8dp"-->
-<!--                    android:text="@{cartItems.quantity}"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:textColor="@color/white"-->
-<!--                    android:textSize="@dimen/size_10dp" />-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/plus"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:clickable="true"-->
-<!--                    android:focusable="true"-->
-<!--                    android:focusableInTouchMode="false"-->
-<!--                    android:src="@drawable/ic_plus__2_" />-->
-<!--            </LinearLayout>-->
-
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_below="@id/imageView_item"-->
-<!--                android:background="@drawable/border"-->
-<!--                android:layout_alignParentBottom="true"-->
-<!--                >-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_centerVertical="true"-->
-<!--                    android:layout_centerHorizontal="true"-->
-<!--                    android:text="Remove"-->
-<!--                    android:padding="@dimen/size_5dp"-->
-<!--                    android:textSize="@dimen/size_16dp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:drawablePadding="@dimen/padd_10"-->
-<!--                    android:drawableLeft="@drawable/ic_baseline_delete_24"-->
-<!--                    android:textColor="@color/colorblack"-->
-<!--                    android:fontFamily="@font/amaranth"/>-->
-
-<!--            </RelativeLayout>-->
 
             <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                 android:id="@+id/elegant_quantity"
