--- a/app/src/main/res/layout/layout_featured.xml
+++ b/app/src/main/res/layout/layout_featured.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/size_5dp"
         android:layout_marginRight="@dimen/size_2dp"
+        android:id="@+id/card_specialoffer"
         app:cardElevation="@dimen/size_5dp"
         app:cardCornerRadius="@dimen/size_5dp"
         android:layout_marginBottom="@dimen/padd_10"
@@ -78,20 +79,21 @@
                     android:textSize="14sp"
                     android:lineSpacingExtra="2sp"
                     android:maxLines="2"
+                    android:layout_marginBottom="@dimen/size_8dp"
                     android:layout_below="@id/textView_offer"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/size_30dp"
-                    android:layout_below="@id/textView_price"
-                    android:text="Add To Cart"
-                    android:textColor="@color/purple_700"
-                    android:background="@drawable/heading_border"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:layout_alignParentRight="true"/>
+<!--                <androidx.appcompat.widget.AppCompatButton-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="@dimen/size_30dp"-->
+<!--                    android:layout_below="@id/textView_price"-->
+<!--                    android:text="Add To Cart"-->
+<!--                    android:textColor="@color/purple_700"-->
+<!--                    android:background="@drawable/heading_border"-->
+<!--                    android:textAlignment="center"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:layout_alignParentRight="true"/>-->
 
 
 
