--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -28,74 +28,13 @@
             android:fontFamily="@font/amaranth"
             android:textStyle="bold"/>
 
-        <androidx.cardview.widget.CardView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_address"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@id/button_add"
-            android:layout_marginTop="@dimen/size_15dp"
-            android:layout_marginLeft="@dimen/size_15dp"
-            android:layout_marginRight="@dimen/size_15dp"
-            app:cardBackgroundColor="@color/white">
-
-            <LinearLayout
-                android:id="@+id/linear_address"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/text_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Jinshad"
-                    android:layout_marginLeft="@dimen/size_15dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:layout_marginTop="@dimen/size_15dp"
-                    android:textSize="@dimen/size_16sp"
-                    android:fontFamily="@font/amaranth"
-                    />
-                <TextView
-                    android:id="@+id/text_phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nalakath"
-                    android:layout_marginLeft="@dimen/size_15dp"
-                    android:textSize="@dimen/size_13sp"
-                    android:fontFamily="@font/amaranth"
-                    />
-                <TextView
-                    android:id="@id/text_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Punnayurkulam Post Office"
-                    android:layout_marginLeft="@dimen/size_15dp"
-                    android:textSize="@dimen/size_13sp"
-                    android:fontFamily="@font/amaranth"
-                    />
-                <TextView
-                    android:id="@+id/text_pincode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pin:6795626"
-                    android:layout_marginLeft="@dimen/size_15dp"
-                    android:textSize="@dimen/size_13sp"
-                    android:fontFamily="@font/amaranth"
-                    />
-                <TextView
-                    android:id="@+id/text_landmark"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Thrissur,Kerala"
-                    android:layout_marginLeft="@dimen/size_15dp"
-                    android:textSize="@dimen/size_13sp"
-                    android:fontFamily="@font/amaranth"
-                    android:layout_marginBottom="@dimen/padd_10"
-                    />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
+            android:layout_marginTop="@dimen/padd_10"
+            />
 
 
     </RelativeLayout>
