--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -28,6 +28,19 @@
             android:layout_marginTop="@dimen/size_15dp"
             app:cardElevation="@dimen/padd_10">
 
+            <TextView
+                android:id="@+id/text_nodata"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No cart Items"
+                android:layout_marginTop="@dimen/size_25dp"
+                android:textColor="@color/md_grey_300"
+                android:textSize="@dimen/size_25dp"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:gravity="center"/>
+
+
             <EditText
                 android:id="@+id/edittext_search"
                 android:layout_width="match_parent"
@@ -53,6 +66,7 @@
             android:layout_below="@id/card_search"/>
 
         <LinearLayout
+            android:id="@+id/linear_checkout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
