--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -34,6 +34,19 @@
 
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:id="@+id/text_nodata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No cart Items"
+            android:layout_marginTop="@dimen/size_25dp"
+            android:textColor="@color/md_grey_300"
+            android:textSize="@dimen/size_25dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:gravity="center"/>
+
+
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -45,10 +58,26 @@
             android:layout_below="@id/card_search"/>
 
         <LinearLayout
+            android:id="@+id/linear_checkout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/total"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:paddingStart="@dimen/padd_10"
+                android:text="Total        : "
+                android:textColor="@color/purple_700"
+                android:textSize="18sp" />
+
 
 
             <TextView
