--- a/app/src/main/res/layout/layout_cart.xml
+++ b/app/src/main/res/layout/layout_cart.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         app:cardElevation="@dimen/padd_10"
         app:cardCornerRadius="@dimen/size_2dp"
+        android:id="@+id/cardview_cart"
         android:layout_marginTop="@dimen/size_8dp"
         android:layout_marginLeft="@dimen/padd_10"
         android:layout_marginRight="@dimen/padd_10"
